// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should match default snapshot 1`] = `
<div>
  <button
    class="sc-bdVaJa jrgQaI"
    type="default"
  >
    Button
  </button>
</div>
`;

exports[`Button component should match snapshot with \`alignVerical\` prop 1`] = `
<div>
  <button
    class="sc-bdVaJa jlWHHE"
    type="default"
  >
    <span>
      Test
    </span>
    <span>
      Button
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot with \`circle\` prop 1`] = `
<div>
  <button
    class="sc-bdVaJa exEqzL"
    type="default"
  >
    Button
  </button>
</div>
`;

exports[`Button component should match snapshot with \`danger\` type prop 1`] = `
<div>
  <button
    class="sc-bdVaJa cpqvrn"
    type="danger"
  >
    Button
  </button>
</div>
`;

exports[`Button component should match snapshot with \`disabled\` prop 1`] = `
<div>
  <button
    class="sc-bdVaJa etCVzB"
    disabled=""
    type="default"
  >
    Button
  </button>
</div>
`;

exports[`Button component should match snapshot with \`fluid\` prop 1`] = `
<div>
  <button
    class="sc-bdVaJa kVIoig"
    type="default"
  >
    Button
  </button>
</div>
`;

exports[`Button component should match snapshot with \`ghost\` prop 1`] = `
<div>
  <button
    class="sc-bdVaJa hxfXVx"
    type="default"
  >
    Button
  </button>
</div>
`;

exports[`Button component should match snapshot with \`href\` prop 1`] = `
<div>
  <a
    class="sc-bdVaJa jrgQaI"
    href="https://github.com/savalazic/elementz-ui"
    type="default"
  >
    Button
  </a>
</div>
`;

exports[`Button component should match snapshot with \`large\` size prop 1`] = `
<div>
  <button
    class="sc-bdVaJa cwcmxG"
    type="default"
  >
    Button
  </button>
</div>
`;

exports[`Button component should match snapshot with \`loading\` prop 1`] = `
<div>
  <button
    class="sc-bdVaJa etCVzB"
    type="default"
  >
    Button
  </button>
</div>
`;

exports[`Button component should match snapshot with \`primary\` type prop 1`] = `
<div>
  <button
    class="sc-bdVaJa eSfKag"
    type="primary"
  >
    Button
  </button>
</div>
`;

exports[`Button component should match snapshot with \`rounded\` prop 1`] = `
<div>
  <button
    class="sc-bdVaJa ivafBX"
    type="default"
  >
    Button
  </button>
</div>
`;

exports[`Button component should match snapshot with \`small\` size prop 1`] = `
<div>
  <button
    class="sc-bdVaJa gsCNgb"
    type="default"
  >
    Button
  </button>
</div>
`;

exports[`Button component should match snapshot with \`success\` type prop 1`] = `
<div>
  <button
    class="sc-bdVaJa eLlhRs"
    type="success"
  >
    Button
  </button>
</div>
`;

exports[`Button component should match snapshot with \`text\` prop 1`] = `
<div>
  <button
    class="sc-bdVaJa ikQCgo"
    type="default"
  >
    Button
  </button>
</div>
`;

exports[`Button component should match snapshot with \`warning\` type prop 1`] = `
<div>
  <button
    class="sc-bdVaJa jhwXWS"
    type="warning"
  >
    Button
  </button>
</div>
`;
